fixed some alignment in header

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,10 +20,11 @@ section {
 .post-box {
     background: whitesmoke;
     border-radius: 5px;
-    padding: 10px;
+    padding: 30px;
     margin-top: 10px;
     margin-bottom: 10px;
     background: whitesmoke;
+    width: 700px;
 }
 
 .wrapper {
@@ -40,7 +41,7 @@ section {
     }
   }
   h1 {
-    text-align: left;
+    text-align: center;
     a {
       color: #303030;
     }
@@ -54,6 +55,8 @@ section {
 .wrapper header a img {
     width: 196px;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     padding-bottom: 10px;
 }
